fixed style for list

--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -28,8 +28,9 @@
 </div>
 
 <div class="container-fluid with-scroll">
-  <span class="fixed-status">Status</span>
+
   <ul class="ssm-cards">
+    <li style="position:relative;"> <span class="fixed-status">Status</span></li>
     <li *ngIf="activeSessions.length !== 0">
       <h3>Active Accounts</h3>
     </li>
