--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -86,7 +86,12 @@
     }
   }
 
-  span { font-size: 14px; color: #222222}
+  span { font-size: 14px;
+    b {
+      font-weight: 700;
+      font-family: "AvenirNextDemiBold", "Open Sans", sans-serif;
+    }
+  }
   h1 { font-size: 20px; }
   h3 { font-size: 12px; }
   h4 { font-size: 10px; }
