--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -1,11 +1,7 @@
-<div class="profile">
-  <div class="portrait" (click)="toggleProfile();">
-      <img src="assets/images/lines.png" alt="" title="" width="16" />
-  </div>
+<div class="profile" (click)="toggleProfile();">
+    <img src="assets/images/lines.png" alt="" title="" width="16" />
 </div>
 
 <div class="centered-div">
     <img src="assets/images/Leapp_Logo_Blu.png"  alt="" title="" width="110px">
-
 </div>
-
