--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -17,11 +17,10 @@
 
     </div>
 
-
     <a (click)="createAccount();" tooltip="Create Account" class="small-btn"><i class="far fa-plus"></i></a>
 
     <span class="search-bar">
-      <input type="text" (change)="filterSessions($event.target)" placeholder="Find an account..."/>
+      <input type="text" (keyup)="filterSessions($any($event.target).value)" placeholder="Find an account..."/>
       <i class="far fa-search"></i>
     </span>
   </div>
