--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -28,7 +28,7 @@
 
 <div class="container-fluid with-scroll">
 
-  <ul class="ssm-cards">
+  <ul class="account-cards">
     <li style="position:relative;"> <span class="fixed-status">Status</span></li>
     <li *ngIf="activeSessions.length !== 0">
       <h3>Active Accounts</h3>
