--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -1,7 +1,7 @@
 <div class="session-card button-area  {{session.account.type === 'AZURE' ? 'azr' : 'aws'}} {{session.active ? 'active' : ''}}" (click)="switchCredentials()">
   <span class="information">
     <b>{{session.account.accountName}}</b> -
-    {{$any(session.account).role ? $any(session.account).role.name.substr(0, 13) : $any(session.account).subscriptionId.substr(0, 13)}}
+    {{ sessionDetailToShow }}
   </span>
   <ng-container dropdown placement="right">
     <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);"><i
