--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -46,6 +46,9 @@
             <button type="button" class="providers {{selectedType === 'federated' ? 'selected' : ''}}" (click)="selectedType = 'federated'">
               <i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Federated
             </button>
+            <button type="button" class="providers {{selectedType === 'plain' ? 'selected' : ''}}" (click)="selectedType = 'plain'">
+              <i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Plain
+            </button>
             <button type="button" class="providers {{selectedType === 'truster' ? 'selected' : ''}}" (click)="selectedType = 'truster'" *ngIf="!firstTime">
               <i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster
             </button>
@@ -73,10 +76,16 @@
           <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
         </div>
 
-        <div class="form-group" style="width: 100%; display: inline-block;">
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="selectedType != 'plain'">
           <label>Role<span class="danger-text">*</span></label>
           <input formControlName="role" type="text" class="form-control" placeholder="Role name" />
           <small class="text-error" *ngIf="(form.controls['role'].dirty || form.controls['role'].touched) && form.controls['role'].errors">Insert the Role</small>
+        </div>
+
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="selectedType == 'plain'">
+          <label>User<span class="danger-text">*</span></label>
+          <input formControlName="plainUser" type="text" class="form-control" placeholder="User name" />
+          <small class="text-error" *ngIf="(form.controls['plainUser'].dirty || form.controls['plainUser'].touched) && form.controls['plainUser'].errors">Insert the User</small>
         </div>
 
         <ng-container *ngIf="selectedType == 'federated'">
@@ -86,6 +95,22 @@
             <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *">
             <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
           </div>
+        </ng-container>
+
+        <ng-container *ngIf="selectedType == 'plain'">
+          <h2>Add secret</h2>
+          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
+            <label style="margin-bottom: 0;">Access  Key<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="Add access key"></i></label>
+            <input formControlName="accessKey" type="text" class="form-control" placeholder="Access Key *">
+          </div>
+
+          <div style="width: 2%; height: 1px; display: inline-block;"></div>
+
+          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
+            <label style="margin-bottom: 0;">Secret Key<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="Add secret key"></i></label>
+            <input formControlName="secretKey" type="text" class="form-control" placeholder="Secret Key *">
+          </div>
+
         </ng-container>
 
         <ng-container *ngIf="selectedType == 'truster'">
