removed hook email from workspace and created an helper method removed unused methods and variables working on loading icon functionality

--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -14,8 +14,8 @@
     </div>
   </ng-container>
 
-  <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}"></i>
-
+  <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
+  <i class="status-item far fa-spinner-third" *ngIf="session.loading"></i>
 </div>
 
 
