loading on main screen when waiting for credentials

--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -15,7 +15,7 @@
   </ng-container>
 
   <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
-  <i class="status-item far fa-spinner-third" *ngIf="session.loading"></i>
+  <i class="status-item far fa-spinner-third fa-spin" *ngIf="session.loading"></i>
 </div>
 
 
