--- a/src/app/start/start-screen/start-screen.component.html
+++ b/src/app/start/start-screen/start-screen.component.html
@@ -2,13 +2,13 @@
 
     <img src="assets/images/start-screen.png" class="background" />
 
-    <h1>If it's <strong>ON</strong><br>you are <strong>IN</strong></h1>
+    <h1>One step away<br>from your <strong>Cloud</strong></h1>
 
-    <p>Collega subito il tuo primo account e comincia ad immergerti nel tuo lavoro.</p>
+    <p>Collect all your Cloud access data in a single place and connect straight away</p>
 
-    <button (click)="resolveDependencies();" class="btn btn-default btn-gradient">Inizia Subito!</button>
+    <button (click)="resolveDependencies();" class="btn btn-default btn-gradient">Start</button>
 
-    <span>Dubbi? Segui la nostra <a href="mailto:support@noovolari.com" class="dark-link">guida</a>.</span>
+    <span>Any doubts? Check our <a href="mailto:support@noovolari.com" class="dark-link">documentation</a>.</span>
 </div>
 
 <div class="content flex-container column page-container" *ngIf="loading">
