--- a/src/app/managing/create-account/create-account.component.scss
+++ b/src/app/managing/create-account/create-account.component.scss
@@ -119,7 +119,7 @@
 
   .providers {
     display: inline-block;
-    width: 109px;
+    width: 175px;
     padding: 10px;
     margin: 0;
     text-align: center;
@@ -144,6 +144,7 @@
     margin-left: 7px;
     margin-right: 0;
     padding: 10px;
+    height: 42px;
     background: $focused-element;
     border: 2px solid $main-color-light!important;
 
@@ -157,13 +158,15 @@
     background: $light-grey;
     color: $charcoal-grey;
     border: 2px solid $charcoal-grey!important;
+    top: -5px;
+    position: relative;
   }
   .providers.selected {
     background: $focused-element;
     border: 2px solid $main-color-light!important;
   }
   .back {
-    padding: 5px 10px;
+    padding: 10px;
     text-decoration: none;
     cursor: pointer;
     color: $text-color;
@@ -179,6 +182,8 @@
     margin-top: 4px;
     position: relative;
     bottom: 5px;
+    display: flex;
+    justify-content: space-between;
 
     .providers {
       margin: 0 8px 0 0;
@@ -211,7 +216,7 @@
 
 @keyframes expanding {
   from { width: 174px; }
-  to { width: 90%; }
+  to { width: 91%; }
 }
 
 @keyframes moving {
