--- a/src/app/start/start-screen/start-screen.component.html
+++ b/src/app/start/start-screen/start-screen.component.html
@@ -8,7 +8,7 @@
 
     <button (click)="resolveDependencies();" class="btn btn-default btn-gradient">Start</button>
 
-    <span>Any doubts? Check our <a href="mailto:support@noovolari.com" class="dark-link">documentation</a>.</span>
+    <span>Any doubts? Check our <a href="https://github.com/Noovolari/leapp/blob/master/README.md" class="dark-link">documentation</a>.</span>
 </div>
 
 <div class="content flex-container column page-container" *ngIf="loading">
