--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -7,7 +7,7 @@
     <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);"><i
       class="fa fa-ellipsis-v"></i></a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
-      <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER) && session.active">SSM session</a>
+      <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS) && session.active">SSM session</a>
       <a (click)="removeAccount(session, $event);">Remove account</a>
       <ng-container *ngIf="session.account.type === eAccountType.AWS">
       <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
@@ -24,7 +24,7 @@
 <ng-template #ssmModalTemplate>
   <div class="modal-header">
     <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
-    <b>{{session.account.accountName}}</b> - {{$any(session.account).role.name}} | <b>SSM</b>
+    <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>SSM</b>
   </div>
   <div class="modal-body">
 
