--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -7,7 +7,7 @@
     <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);"><i
       class="fa fa-ellipsis-v"></i></a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
-      <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS) && session.active">SSM session</a>
+      <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER) && session.active">SSM session</a>
       <a (click)="removeAccount(session, $event);">Remove account</a>
       <ng-container *ngIf="session.account.type === eAccountType.AWS">
       <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
