- tentative to fix issue #4: sso url alias. Need external testing for proof of use-case - improvement: made profile page into options -> corrected graphics to make it similar to the rest of the app

--- a/src/app/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/shared/profile-sidebar/profile-sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="profile {{profileOpen ? 'extended' : ''}}" (click)="closeProfile();">
   <span class="close-profile"><i class="fa fa-times"></i></span>
 
-  <a class="menu-item" (click)="goToProfile();"><i class="fa fa-user"></i>&nbsp;Profile</a>
+  <a class="menu-item" (click)="goToProfile();"><i class="fa fa-gear"></i>&nbsp;Options</a>
   <a class="menu-item" (click)="logout();"><i class="fa fa-sign-out-alt"></i>&nbsp;IdP Logout</a>
 </div>
