--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -1,32 +1,33 @@
-<app-profile></app-profile>
+<div class="background">
+  <app-profile></app-profile>
 
-<div class="container-fluid">
-  <app-profile-sidebar></app-profile-sidebar>
+  <div class="container-fluid">
+    <app-profile-sidebar></app-profile-sidebar>
 
-  <h1>Update Your IdP URLs</h1>
-  <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveIdpUrls();">
+    <h1>Options</h1>
+    <p>Tweak various aspects of Leapp</p>
 
-    <div class="form-group" style="width: 70%; display: inline-block;">
-      <label>Google IdP URL<span class="danger-text">*</span></label>
-      <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
-      <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
-    </div>
+    <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveOptions();">
 
-    <div class="form-group" style="width: 70%; display: inline-block;">
-      <label>Proxy URL</label>
-      <input formControlName="proxyUrl" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyUrl" >
-    </div>
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Google IdP URL<span class="danger-text">*</span></label>
+        <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="" >
+        <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
+      </div>
 
-    <div class="form-group" style="width: 30%; display: inline-block; padding-top: 36px; padding-left: 20px;">
-      <button type="button" (click)="saveIdpUrls();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'btn btn-default': 'btn btn-default btn-gradient'">Save</button>
-    </div>
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Proxy URL</label>
+        <input formControlName="proxyUrl" type="text" class="form-control" placeholder="add a Proxy Url when needed" [value]="" >
+      </div>
 
-    <br><br><br><br><br><br>
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>SSO Alias URL</label>
+        <input formControlName="ssoAliasUrl" type="text" class="form-control" placeholder="use it when you have an sso alias" [value]="" >
+      </div>
 
-    <div class="form-group" style="width: 32%; display: inline-block;"></div>
-    <div class="form-group" style="width: 26%; display: inline-block; padding-left: 14px;">
-      <button type="button" (click)="goBack();" class="btn btn-secondary btn-outline-secondary">Back</button>
-    </div>
+      <button type="button" (click)="saveOptions();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'pull-right disabled': 'pull-right'">Save</button>
+      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
 
-  </form>
+    </form>
+  </div>
 </div>
