--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -89,10 +89,17 @@
         <!-- ====================== -->
         <!-- AWS ACCOUNT PROPERTIES -->
         <!-- ====================== -->
-        <div class="form-group" style="width: 100%; display: inline-block;">
+        <div class="form-group" style="width: 49%; display: inline-block;">
           <label>Account Number<span class="danger-text">*</span></label>
           <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
           <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
+        </div>
+
+        <div class="form-group" style="width: 2%; display: inline-block;"></div>
+
+        <div class="form-group" style="width: 49%; display: inline-block;">
+          <label>AWS Region</label>
+          <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="accountType !== eAccountType.AWS_PLAIN_USER">
