--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -10,9 +10,8 @@
     <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveOptions();">
 
       <div class="form-group" style="width: 100%; display: inline-block;">
-        <label>Google IdP URL<span class="danger-text">*</span></label>
+        <label>Google IdP URL</label>
         <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="" >
-        <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
       </div>
 
       <div class="form-group" style="width: 100%; display: inline-block;">
