--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -11,7 +11,7 @@
 
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label>Google IdP URL</label>
-        <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="" >
+        <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url" [value]="" >
       </div>
 
       <div class="form-group" style="width: 100%; display: inline-block;">
